Removed extra space from BookmarkView. Stopped user selection in pop-up menu.

--- a/client/src/views/bookmark-view.scss
+++ b/client/src/views/bookmark-view.scss
@@ -18,6 +18,7 @@
 
         .story-view {
             border: 0;
+            margin: 0;
         }
     }
 
